CMS-2309 Admin - Fix annoying scrollbars and paddings

--- a/modules/wem-webapp/src/main/webapp/admin/resources/less/api/app/wizard/wizard-panel.less
+++ b/modules/wem-webapp/src/main/webapp/admin/resources/less/api/app/wizard/wizard-panel.less
@@ -7,8 +7,10 @@
 
   .wizard-back-panel {
 
-    margin-top: 10px;
-    margin-left: 10px;
+    .form-panel {
+      margin-top:10px;
+      margin-left:10px;
+    }
 
     .form-icon {
       float: left;
